# xstatic-dagre-d3

./: setup.cfg  setup.py
xstatic/pkg/dagre_d3/: __init__.py
