[metadata]
name = XStatic-Dagre-D3
description = A D3-based renderer for Dagre (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = https://github.com/dagrejs/dagre-d3
keywords = dagre d3 xstatic
license = BSD
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
